# WiiDevTemplate

./: CMakeLists.txt  LICENSE  README.md  autorun.py  wii_toolchain.cmake
src/: main.cpp
src/utils/: Wiimote.cpp  Wiimote.h  console.cpp  console.h  draw.cpp  draw.h  init.cpp  init.h
